--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "fluidbottomnavigation-rn": "^0.1.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
@@ -24,6 +26,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-view-overflow": "^0.0.5",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
