--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
