--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "private": true
 }
