--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.18",
     "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/material-top-tabs": "^6.6.5",
-    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/material-top-tabs": "^6.6.13",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@types/d3-shape": "^3.1.6",
@@ -43,7 +43,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keychain": "^8.2.0",
-    "react-native-pager-view": "6.2.0",
+    "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.9.0",
