--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "mongoose": "^8.2.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-calendars": "^1.1303.0",
+    "react-native-calendars": "^1.1304.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-dotenv": "^3.4.11",
     "react-native-fbsdk": "^3.0.0",
     "react-native-fs": "^2.20.0",
