--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-calendars": "^1.1303.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-fbsdk": "^3.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
@@ -51,6 +52,7 @@
     "react-native-svg": "^13.14.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
+    "typescript": "^5.1.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
