--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.1.3",
+    "webpack-dev-server": "^5.0.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
