--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -55,11 +55,14 @@
     "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.1.3",
     "webpack-dev-server": "^5.0.4",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-splash-screen": "~0.20.5",
+    "expo-system-ui": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "react-native-svg-transformer": "^1.3.0"
+    "react-native-svg-transformer": "^1.3.0",
+    "@types/react-native": "~0.64.12"
   },
   "private": true
 }
