--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "@types/d3-shape": "^3.1.6",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "d3-shape": "^3.2.0",
     "expo": "~49.0.15",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "express": "^4.18.3",
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
@@ -55,14 +57,12 @@
     "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.1.3",
     "webpack-dev-server": "^5.0.4",
-    "yup": "^1.3.3",
-    "expo-splash-screen": "~0.20.5",
-    "expo-system-ui": "~2.4.0"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "react-native-svg-transformer": "^1.3.0",
-    "@types/react-native": "~0.64.12"
+    "@types/react-native": "~0.64.12",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "private": true
 }
