--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "^6.2.0",
+    "react-native-pure-jwt": "^3.0.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.9.0",
