--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^7.6.4",
-    "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-native-picker/picker": "^2.6.1",
+    "@react-native/metro-config": "^0.75.0-main",
     "@react-navigation/bottom-tabs": "^6.5.18",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -29,8 +30,8 @@
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "d3-shape": "^3.2.0",
-    "expo": "~49.0.15",
-    "expo-splash-screen": "~0.20.5",
+    "expo": "^50.0.14",
+    "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "express": "^4.18.3",
@@ -41,7 +42,7 @@
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1304.1",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-deck-swiper": "^2.0.17",
+    "react-native-deck-swiper": "^1.1.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fbsdk": "^3.0.0",
@@ -49,8 +50,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "^6.2.0",
-    "react-native-push-notification": "^8.1.1",
     "react-native-pure-jwt": "^3.0.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.9.0",
