--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "^6.2.0",
-    "react-native-push-notification": "^8.1.1",
     "react-native-pure-jwt": "^3.0.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.9.0",
@@ -60,7 +60,8 @@
     "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.1.3",
     "webpack-dev-server": "^5.0.4",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-notifications": "~0.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
