--- a/package.json
+++ b/package.json
@@ -22,15 +22,13 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@types/d3-shape": "^3.1.6",
-    "@ui-kitten/components": "^5.3.1",
-    "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "d3-shape": "^3.2.0",
-    "expo": "^50.0.14",
-    "expo-splash-screen": "^0.10.3",
+    "expo": "~49.0.15",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "express": "^4.18.3",
@@ -41,14 +39,14 @@
     "react-native": "0.72.10",
     "react-native-calendars": "^1.1304.1",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-deck-swiper": "^1.1.7",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fbsdk": "^3.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keychain": "^8.2.0",
-    "react-native-pager-view": "^6.2.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-pure-jwt": "^3.0.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.3.0",
