--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "d3": "^7.9.0",
     "d3-shape": "^3.2.0",
     "expo": "~49.0.15",
+    "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -45,6 +46,7 @@
     "react-native-fbsdk": "^3.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "6.2.0",
     "react-native-pure-jwt": "^3.0.2",
@@ -58,8 +60,7 @@
     "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.1.3",
     "webpack-dev-server": "^5.0.4",
-    "yup": "^1.3.3",
-    "expo-notifications": "~0.20.1"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
