--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@types/d3-shape": "^3.1.6",
+    "animate": "^1.0.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "d3-shape": "^3.2.0",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "^12.7.2",
     "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
