--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "owner": "000892874",
+    "owner": "3mptyspac3",
     "name": "Vita",
     "slug": "Vita",
     "version": "1.0.0",
