--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "d3": "^7.9.0",
     "d3-shape": "^3.2.0",
     "expo": "~49.0.15",
-    "expo-linear-gradient": "^12.7.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -66,7 +66,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react-native": "~0.64.12",
     "react-native-svg-transformer": "^1.3.0"
   },
   "private": true
